Subclass page.html in home

--- a/expenses/templates/views/home.html
+++ b/expenses/templates/views/home.html
@@ -1,5 +1,5 @@
-{% extends "lib/base.html" %}
+{% extends "lib/page.html" %}
 
-{% block body %}
+{% block content %}
     <h1>It works!</h1>
 {%- endblock %}
