Add authed property to session

--- a/expenses/templates/lib/page.html
+++ b/expenses/templates/lib/page.html
@@ -1,7 +1,7 @@
 {% extends "lib/base.html" %}
 
 {% block body %}
-  {%- if 'user' in session %}
+  {%- if session.authed %}
     <a href="{{ url_for('.logout', token=session.csrf) }}">Logout</a>
   {%- endif %}
   {%- with messages = get_flashed_messages() %}
