Link signup and login pages

--- a/expenses/templates/views/signup.html
+++ b/expenses/templates/views/signup.html
@@ -11,4 +11,5 @@
       <input type="password" name="password" id="password" placeholder="SeCuR3 p4ssw0rd"><br />
       <input type="submit" value="Sign me up">
     </form>
+    Or, <a href="{{ url_for('.login_page') }}">Login</a>
 {%- endblock %}
