--- a/expenses/templates/views/login.html
+++ b/expenses/templates/views/login.html
@@ -9,4 +9,5 @@
       <input type="password" name="password" placeholder="SeCuR3 p4ssw0rd"{% if request.args.username %} autofocus{% endif %}><br />
       <input type="submit" value="Login">
     </form>
+    Or, <a href="{{ url_for('.signup_page') }}">Sign up</a>
 {%- endblock %}
