--- a/expenses/templates/views/signup.html
+++ b/expenses/templates/views/signup.html
@@ -6,7 +6,7 @@
       <label for="name">Name</label>
       <input type="text" name="name" id="name" placeholder="Taylor Swift" autofocus><br />
       <label for="username">Username</label>
-      <input type="text" name="username" id="username" placeholder="tswizzle" autofocus><br />
+      <input type="text" name="username" id="username" placeholder="tswizzle"><br />
       <label for="password">Password</label>
       <input type="password" name="password" id="password" placeholder="SeCuR3 p4ssw0rd"><br />
       <input type="submit" value="Sign me up">
