--- a/expenses/templates/views/signup.html
+++ b/expenses/templates/views/signup.html
@@ -1,15 +1,16 @@
-{% extends "lib/page.html" %}
+{% extends "lib/form.html" %}
 
-{% block content %}
-    <form method="post" action="{{ url_for('.signup') }}">
-      <input type="hidden" name="token" value="{{ session.csrf }}">
-      <label for="name">Name</label>
-      <input type="text" name="name" id="name" placeholder="Taylor Swift" autofocus><br />
-      <label for="username">Username</label>
-      <input type="text" name="username" id="username" placeholder="tswizzle"><br />
-      <label for="password">Password</label>
-      <input type="password" name="password" id="password" placeholder="SeCuR3 p4ssw0rd"><br />
-      <input type="submit" value="Sign me up">
-    </form>
-    Or, <a href="{{ url_for('.login_page') }}">Login</a>
+{% block title %}Create an Account{% endblock %}
+
+{% block action %}{{ url_for('.signup') }}{% endblock %}
+
+{% block form %}
+        <input type="text" name="name" placeholder="Full Name" autofocus><br />
+        <input type="text" name="username" placeholder="Username"><br />
+        <input type="password" name="password" placeholder="Password"><br />
+        <input type="submit" value="Create account">
+{%- endblock %}
+
+{% block foot %}
+        <a href="{{ url_for('.login_page') }}">Sign in</a>
 {%- endblock %}
