--- a/expenses/static/css/main.css
+++ b/expenses/static/css/main.css
@@ -3,6 +3,10 @@ html {
     font-family: HelveticaNeue, Helvetica, Arial, sans-serif;
 }
 
+body {
+    margin: 0;
+}
+
 .err-code, .err-msg {
     text-align: center;
 }
@@ -14,6 +18,26 @@ html {
 .box {
     border-radius: 2px;
     box-shadow: 0 0 6px #bfbfbf;
+}
+
+.header {
+    background-color: #009688;
+    box-shadow: 0 0 13px #616161;
+    padding: 16px 40px;
+}
+
+.logo {
+    color: #fff;
+    font-size: 20px;
+    letter-spacing: 1px;
+    text-decoration: none;
+}
+
+.login {
+    color: #fff;
+    float: right;
+    margin-top: 2px;
+    text-decoration: none;
 }
 
 .auth {
