--- a/expenses/templates/lib/form.html
+++ b/expenses/templates/lib/form.html
@@ -1,6 +1,6 @@
-{% extends "lib/page.html" %}
+{% extends "lib/base.html" %}
 
-{% block content %}
+{% block body %}
     <div class="auth box">
       <div class="auth-title">{% block title %}{% endblock %}</div>
     {%- with messages = get_flashed_messages(with_categories=True) %}
