--- a/expenses/templates/views/home.html
+++ b/expenses/templates/views/home.html
@@ -1,6 +1,6 @@
-{% extends "lib/page.html" %}
+{% extends "lib/base.html" %}
 
-{% block content %}
+{% block body %}
     <div class="header">
       <a class="logo" href="{{ url_for('.home') }}">Expenses</a>
     {%- if session.authed %}
