--- a/expenses/templates/views/login.html
+++ b/expenses/templates/views/login.html
@@ -1,6 +1,8 @@
 {% extends "lib/form.html" %}
 
-{% block title %}Sign in to Your Account{% endblock %}
+{% block title %}Expenses - Sign In{% endblock %}
+
+{% block form_title %}Sign in to Your Account{% endblock %}
 
 {% block action %}{{ url_for('.auth') }}{% endblock %}
 
