--- a/expenses/templates/views/signup.html
+++ b/expenses/templates/views/signup.html
@@ -1,6 +1,8 @@
 {% extends "lib/form.html" %}
 
-{% block title %}Create an Account{% endblock %}
+{% block title %}Expenses - Create Account{% endblock %}
+
+{% block form_title %}Create an Account{% endblock %}
 
 {% block action %}{{ url_for('.signup') }}{% endblock %}
 
