Use url_for for static paths

--- a/expenses/templates/views/home.html
+++ b/expenses/templates/views/home.html
@@ -41,5 +41,5 @@
     <script>
       var data = {{ purchases | tojson | safe }};
     </script>
-    <script src="/static/js/main.js"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 {%- endblock %}
