--- a/expenses/templates/lib/base.html
+++ b/expenses/templates/lib/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>{% block title %}Expenses{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
   </head>
   <body>
     {%- block body %}{% endblock %}
