Default to today

--- a/expenses/templates/views/home.html
+++ b/expenses/templates/views/home.html
@@ -30,7 +30,7 @@
               $<input name="price" type="text" placeholder="34.17">
             </div>
             <div class="cell">
-              <input name="date" type="text" placeholder="{{ '{0:%m/%d/%Y}'.format(today) }}">
+              <input name="date" type="text" placeholder="{{ '{0:%m/%d/%Y}'.format(today) }}" value="{{ '{0:%m/%d/%Y}'.format(today) }}">
             </div>
           </div>
         </div>
